@@ -1,7 +1,8 @@
 4.6.0 (Work-in-progress):
 
-* Incompatible API changes: new argument to mesh/getBasisFunctions, removed
-  mesh/preallocateBasisFunctions and mesh/precomputeBasisFunctions.
+* Incompatible API changes: new optional argument to mesh/clear; new argument to
+  mesh/getBasisFunctions, removed mesh/preallocateBasisFunctions and
+  mesh/precomputeBasisFunctions.
 
 4.5.6 (March 30, 2020): better calculation of OCC bounding boxes using STL; API
 tutorials; small bug fixes.
